--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -10,7 +10,7 @@
             .form-group
               = f.input :email, required: false, autofocus: true, input_html: { class: 'form-control' }
             .form-group
-              = f.input :password, required: false, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { class: 'form-control' }
+              = f.input :password, required: false, hint: ("#{@minimum_password_length} characters minimum " if @minimum_password_length), input_html: { class: 'form-control' }
             .form-group
               = f.input :password_confirmation, required: false, input_html: { class: 'form-control' }
             .d-flex.justify-content-center
@@ -20,4 +20,9 @@
           h4.card-title Features
           ul.feature-list
             li Save shops forever
+          hr
+          h5.card-title Planned Features
+          ul.feature-list
             li Regenerate saved shops
+            li Custom Shops
+            li Custom Items
