--- a/app/views/layouts/navigation/_navbar.html.slim
+++ b/app/views/layouts/navigation/_navbar.html.slim
@@ -7,13 +7,14 @@
     .navbar-nav
       = link_to 'Home', root_path, class: 'nav-item nav-link'
       = link_to 'Login', new_user_session_path, class: 'nav-item nav-link' unless current_user
+      = link_to 'Sign up', new_user_registration_path, class: 'nav-item nav-link' unless current_user
       - if current_user
         = link_to 'Shops', shops_path, class: 'nav-item nav-link'
         li.nav-item.dropdown
           .nav-link.dropdown-toggle[href="#" data-toggle="dropdown"]
             = current_user.email
           .dropdown-menu
-            = link_to 'Subscription', '#', class: 'dropdown-item'
+            = link_to 'Subscription', subscriptions_path, class: 'dropdown-item'
             = link_to 'Edit Profile', edit_user_registration_path, class: 'dropdown-item'
             .dropdown-divider
             = link_to 'Logout', destroy_user_session_path, class: 'dropdown-item', method: :delete
