--- a/app/views/shops/index.html.slim
+++ b/app/views/shops/index.html.slim
@@ -1,11 +1,25 @@
+- if shops.empty?
+  .d-flex.justify-content-center.h-100.align-content-center.mt-5
+    .card.col-md-6.p-0
+      h4.card-header Create A Shop
+      .card-body.p-0
+        .row.no-gutters
+          .col-12.px-3.py-2
+            p No shops found. 
+            = link_to 'Create one', new_shop_path
 
-.d-flex.flex-wrap
+.d-flex.flex-wrap.pt-5
   - shops.each_slice(4) do |shop_group|
       - shop_group.each do |shop|
-        .card.w-50.m-0
+        .card.col-sm-12.col-md-4.col-12.m-0.p-0
+          .card-header.d-flex.justify-content-between
+            .col-11
+              = link_to shop_path(shop.slug)
+                h4.card-title= shop.shop_type
+            .col-1
+              = link_to 'X', shop_path(shop), method: :delete, class: 'text-danger pull-right', data: { confirm: 'Are you sure?' }
+            
           .card-body
-            = link_to shop_path(shop.slug)
-              h4.card-title= shop.shop_type
             dl.row
               dt.col-sm-4 Shop Specialization
               dd.col-sm-8= shop.specialized_shop.name
