--- a/app/views/static/index.html.slim
+++ b/app/views/static/index.html.slim
@@ -4,8 +4,12 @@
       | Star Wars RPG Shop Generator
     p.lead
       | Quickly and easily generate shopping lists for players
-    a.btn.btn-lg.btn-primary[href="/shops/new" role="button"]
-      | Create A Free Shop
+    - if current_user
+      a.btn.btn-lg.btn-primary[href="/shops/new" role="button"]
+        | Create A Shop
+    - else
+      a.btn.btn-lg.btn-primary[href="/shops/new" role="button"]
+        | Create A Free Shop
   
   .card-deck
     .card.mb-5
