--- a/app/views/shops/new.html.slim
+++ b/app/views/shops/new.html.slim
@@ -94,7 +94,10 @@
     .row
       .col-sm-10
         p.small 
-          span.text-muted Note: Free shops expire after 24 hours
+          span.text-muted 
+            | Note: Free shops expire after 24 hours. Want to save a shop forever? 
+            = link_to 'Sign up', new_user_registration_path
+            | &nbsp;for a subscription.
     .row.justify-content-center
       .col-sm-3
         = f.button :submit, 'Generate Shop', class: 'btn btn-success btn-lg btn-block'
