--- a/app/views/static/index.html.slim
+++ b/app/views/static/index.html.slim
@@ -4,6 +4,10 @@
       | Star Wars RPG Shop Generator
     p.lead
       | Quickly and easily generate shopping lists for players
+    p.lead
+      | Over 
+      = content_tag :span, @shop_count, class: 'badge badge-pill badge-secondary'
+      | &nbsp;shops created!
     - if current_user
       a.btn.btn-lg.btn-primary[href="/shops/new" role="button"]
         | Create A Shop
