Add and use custom worlds

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -21,6 +21,7 @@
           h4.card-title Features
           ul.feature-list
             li Save shops forever
+            li Create your own worlds
           hr
           h5.card-title Planned Features
           ul.feature-list
