--- a/app/views/shops/show.html.slim
+++ b/app/views/shops/show.html.slim
@@ -1,6 +1,4 @@
-/ h1 Shops#show
-/ p Find me in app/views/shops/show.html.slim
-
+= content_for(:title) { 'Shop | SWRPG Shop Generator' }
 .card.p-2
   .card-block
     dl.row
