--- a/app/views/shops/index.html.slim
+++ b/app/views/shops/index.html.slim
@@ -1,3 +1,4 @@
+= content_for(:title) { 'Shops | SWRPG Shop Generator' }
 - if shops.empty?
   .d-flex.justify-content-center.h-100.align-content-center.mt-5
     .card.col-md-6.p-0
