Ability to regenerate shops

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -22,9 +22,9 @@
           ul.feature-list
             li Save shops forever
             li Create your own worlds
+            li Regenerate saved shops
           hr
           h5.card-title Planned Features
           ul.feature-list
-            li Regenerate saved shops
-            li Custom Shops
-            li Custom Items
+            li Custom Shop Specializations
+            li Mobile apps
