--- a/app/views/worlds/index.html.slim
+++ b/app/views/worlds/index.html.slim
@@ -8,17 +8,17 @@
           .col-12.px-3.py-2
             p No worlds found. 
 
-.col-12.d-flex.justify-content-center.pt-5
+.col-12.d-flex.justify-content-center.py-5
   = link_to 'Create New World', new_world_path, class: 'btn btn-primary'
-.d-flex.flex-wrap.pt-5
-  - worlds.each_slice(4) do |world_group|
-      - world_group.each do |world|
-        .card.col-sm-12.col-md-4.col-12.m-0.p-0
+
+.container-fluid
+  .d-flex.flex-wrap
+    - worlds.each do |world|
+      .col-12.col-md-6.col-xl-4.py-1
+        .card
           .card-header.d-flex.justify-content-between
-            .col-11
+            .col-12
               h4.card-title= world.name
-            .col-1
-              = link_to 'X', world_path(world), method: :delete, class: 'text-danger pull-right', data: { confirm: 'Are you sure? This will delete all shops in this world.' }
             
           .card-body
             .col-12
@@ -29,3 +29,6 @@
                 dd.col-sm-8= world.rarity_modifier
                 dt.col-sm-4 Price Modifier
                 dd.col-sm-8= world.price_modifier
+          .card-footer.d-flex.justify-content-between
+            .col-12.text-center
+              = link_to fa_icon("times", text: 'Delete'), world_path(world), method: :delete, class: 'btn btn-danger px-4', data: { confirm: 'Are you sure? This will delete all shops in this world.' }
