Moved stuff to partials, cleaned up style, new 404

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,6 +53,9 @@ ul.feature-list {
   }
 }
 
+.box-shadow {
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, .05);
+}
 
 .stripe-button-el {
   display: none !important;
