--- a/app/views/shops/index.html.slim
+++ b/app/views/shops/index.html.slim
@@ -13,33 +13,5 @@
 
 .container-fluid
   .d-flex.flex-wrap
-    - shops.each do |shop|
-      .col-12.col-md-6.col-xl-4.py-1
-        .card
-          .card-header.d-flex.justify-content-between
-            = link_to shop_path(shop.slug)
-              h4.card-title= shop.shop_type
-          .card-body
-            dl.row
-              dt.col-sm-4 Shop Specialization
-              dd.col-sm-8= shop.specialized_shop.name
-              dt.col-sm-4 Characteristic Level
-              dd.col-sm-8= shop.characteristic_level
-              dt.col-sm-4 Skill Level
-              dd.col-sm-8= shop.skill_level
-              dt.col-sm-4 World
-              dd.col-sm-8 = shop.world.name
-              dt.col-sm-4 Modifiers
-              dd.col-sm-8
-                ul.list-unstyled
-                  li 
-                  | Rarity: &nbsp;
-                  = shop.world.rarity_modifier
-                  li
-                  | Price:&nbsp;
-                  = shop.world.price_modifier
-          .card-footer.d-flex.justify-content-between
-            .col-6.text-center
-              = link_to fa_icon("refresh", text: 'Refresh'), shop_path(shop.id), method: :put, class: 'mx-2 btn btn-success btn-block'
-            .col-6.text-center
-              = link_to fa_icon("times", text: 'Delete'), shop_path(shop), method: :delete, class: 'mx-2 btn btn-danger btn-block', data: { confirm: 'Are you sure?' }
+    =render shops
+      
