--- a/app/views/shops/missing_shop.html.slim
+++ b/app/views/shops/missing_shop.html.slim
@@ -1,9 +1,9 @@
 = content_for(:title) { 'Missing Shop | SWRPG Shop Generator' }
 .container
-  .jumbotron.text-center[style="margin-top: 50px"]
+  .jumbotron.text-center.box-shadow[style="margin-top: 50px"]
     p.h1.text-center
-      | Missing Shop
-    p.lead
-      | This shop may have expired.
+    = image_tag('404.svg', size: "700x279")
+    p.lead.mt-5
+      | Oh dear! This shop may have expired.
     a.btn.btn-lg.btn-primary[href="/shops/new" role="button"]
       | Create A New Shop
