--- a/app/views/static/index.html.slim
+++ b/app/views/static/index.html.slim
@@ -1,20 +1,20 @@
+.jumbotron.home.text-center.box-shadow.px-5
+  p.h1.text-center
+    | Star Wars RPG Shop Generator
+  p.lead
+    | Quickly and easily generate shopping lists for players
+  p.lead
+    | Over 
+    = content_tag :span, @shop_count, class: 'badge badge-pill badge-secondary'
+    | &nbsp;shops created!
+  - if current_user
+    a.btn.btn-lg.btn-primary[href="/shops/new" role="button"]
+      | Create A Shop
+  - else
+    a.btn.btn-lg.btn-primary[href="/shops/new" role="button"]
+      | Create A Free Shop
+
 .container
-  .jumbotron.home.text-center[style="margin-top: 50px"]
-    p.h1.text-center
-      | Star Wars RPG Shop Generator
-    p.lead
-      | Quickly and easily generate shopping lists for players
-    p.lead
-      | Over 
-      = content_tag :span, @shop_count, class: 'badge badge-pill badge-secondary'
-      | &nbsp;shops created!
-    - if current_user
-      a.btn.btn-lg.btn-primary[href="/shops/new" role="button"]
-        | Create A Shop
-    - else
-      a.btn.btn-lg.btn-primary[href="/shops/new" role="button"]
-        | Create A Free Shop
-  
   .card-deck
     .card.mb-5
       .bg-primary.py-5.text-center.align-middle.text-white.customize-card-header
