Re-enable sign ups

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -21,10 +21,11 @@
           h4.card-title Features
           ul.feature-list
             li Save shops forever
-            li Create your own worlds
+            li Create your own worlds with custom rarity/price modifiers
             li Regenerate saved shops
           hr
           h5.card-title Planned Features
           ul.feature-list
             li Custom Shop Specializations
+            li Choose items in your shop
             li Mobile apps
