--- a/app/views/armor/_item_row.html.slim
+++ b/app/views/armor/_item_row.html.slim
@@ -1,25 +1,22 @@
 tr
-  td.p-3.align-middle
-    = image_tag("items/#{item.fetch('image_filename')}", width: '150')
-  td.p-3.align-middle
+  td.p-1.align-middle
     = item.fetch('name')
     = item.fetch('is_restricted', false) ? '&nbsp;<span class="restricted-item">(R)</span>'.html_safe : nil
-  td.p-3.align-middle
-    p= item.fetch('description')
-    br
+  td.p-1.align-middle
     - item.fetch('base_mods', []).each do |mod|
-      p= format_description(mod.fetch('misc_desc', ''))
-  td.p-3.align-middle.text-center[data-sort-value="#{item.fetch('price')}"]
+      - next unless mod.dig('misc_desc')
+      p= format_description(mod.dig('misc_desc'))
+  td.p-1.align-middle.text-center[data-sort-value="#{item.fetch('price')}"]
     = number_with_delimiter item.fetch('price')
-  td.p-3.align-middle.text-center
+  td.p-1.align-middle.text-center
     = item.fetch('defense')
-  td.p-3.align-middle.text-center
+  td.p-1.align-middle.text-center
     = item.fetch('soak')
-  td.p-3.align-middle.text-center
+  td.p-1.align-middle.text-center
     = item.fetch('encumbrance')
-  td.p-3.align-middle.text-center
+  td.p-1.align-middle.text-center
     = item.fetch('hard_points')
-  td.p-3.align-middle.text-center
+  td.p-1.align-middle.text-center
     = item.fetch('rarity')
-  td.p-3.align-middle
+  td.p-1.align-middle
     = roll_results(item.fetch('roll_total', [0,0,0]))
